<resources>
    <string name="app_name">Final project</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="convert_from">Amount To Convert</string>
    <string name="convert_to">Conversion Rate</string>
    <string name="select_country">Select Country</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="password">Password</string>
    <string name="welcome">Welcome </string>
    <string name="UserType">User Type</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="design">UI design items</string>
    <string name="forget_password">Forgot your Password?</string>

    <string name="settings_header">Settings</string>
    <string name="view_more">View more about specific privacy policy</string>
    <string name="settings_language">Choose Language</string>
    <string name="settings_dark_mode">Dark Mode</string>
    <string name="settings_accounts">Accounts</string>
    <string name="settings_about">About Us</string>
    <string name="account_header">Account</string>
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>

    <string name="login_new_user">Are you a new user? Register!</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string-array name="UserType">
        <item>Admin</item>
        <item>Student</item>
        <item>Doctor</item>
    </string-array>

</resources>