<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        app:layout_constraintDimensionRatio="16:9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/top_background"
        android:contentDescription="@string/design" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="100dp"
                android:layout_marginTop="65dp"
                android:layout_marginBottom="100dp"
                android:text="@string/welcome"
                android:textColor="@color/purple"
                android:textSize="40sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edtEmail"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:autofillHints=""
                android:background="@drawable/edittext_background"
                android:drawableStart="@drawable/email"
                android:drawablePadding="16dp"
                android:ems="10"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:padding="8dp"
                android:textColor="@color/purple"
                android:textColorHint="@color/purple" />

<!--            <EditText-->
<!--                android:id="@+id/edtPassword"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="50dp"-->
<!--                android:layout_marginStart="32dp"-->
<!--                android:layout_marginTop="32dp"-->
<!--                android:layout_marginEnd="32dp"-->
<!--                android:autofillHints=""-->
<!--                android:background="@drawable/edittext_background"-->
<!--                android:drawableStart="@drawable/password"-->
<!--                android:drawablePadding="16dp"-->
<!--                android:ems="10"-->
<!--                android:hint="@string/prompt_password"-->
<!--                android:inputType="textPassword"-->
<!--                android:padding="8dp"-->
<!--                android:textColor="@color/purple"-->
<!--                android:textColorHint="@color/purple" />-->
            <com.google.android.material.textfield.TextInputLayout
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/edtPasswordLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="32dp"
                app:endIconMode="password_toggle"

                app:endIconTint="@color/purple"
                android:textColorHint="@color/purple"

                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtPassword"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/edittext_background"
                    android:drawableStart="@drawable/password"
                    android:drawablePadding="16dp"
                    android:ems="10"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:padding="8dp"
                    android:textColor="@color/purple"
                  />
            </com.google.android.material.textfield.TextInputLayout>


            <!--            <TableLayout-->
            <!--                android:id="@+id/tableLayout"-->
            <!--                android:layout_width="match_parent"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                tools:ignore="MissingConstraints">-->

            <!--                <TableRow-->
            <!--                    android:layout_width="match_parent"-->
            <!--                    android:layout_height="match_parent">-->

            <!--                    <TextView-->
            <!--                        android:id="@+id/txtusertype"-->
            <!--                        android:layout_width="201dp"-->
            <!--                        android:layout_height="wrap_content"-->
            <!--                        android:layout_marginStart="32dp"-->
            <!--                        android:layout_marginTop="16dp"-->
            <!--                        android:layout_marginEnd="32dp"-->
            <!--                        android:drawableStart="@drawable/name"-->
            <!--                        android:drawablePadding="16dp"-->
            <!--                        android:ems="10"-->
            <!--                        android:text="@string/UserType"-->
            <!--                        android:textColor="@color/purple"-->
            <!--                        android:textSize="20dp"-->
            <!--                        app:layout_constraintEnd_toEndOf="parent"-->
            <!--                        app:layout_constraintStart_toStartOf="parent"-->
            <!--                        app:layout_constraintTop_toBottomOf="@+id/edtPassword" />-->

            <!--                    <Spinner-->
            <!--                        android:id="@+id/spnuser"-->
            <!--                        android:layout_width="117dp"-->
            <!--                        android:layout_height="wrap_content"-->
            <!--                        android:layout_gravity="center_vertical"-->
            <!--                        android:layout_marginTop="8dp"-->
            <!--                        android:hint="@string/UserType"-->
            <!--                        app:layout_constraintBottom_toBottomOf="parent"-->
            <!--                        app:layout_constraintEnd_toEndOf="parent"-->
            <!--                        app:layout_constraintStart_toStartOf="parent"-->
            <!--                        app:layout_constraintTop_toTopOf="parent" />-->

            <!--                </TableRow>-->
            <!--            </TableLayout>-->

            <CheckBox
                android:id="@+id/chk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:gravity="center_horizontal"
                android:text="Remember me"
                android:textColor="@color/purple"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtusertype" />


            <ImageView
                android:id="@+id/imgenter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/action_sign_in"
                android:onClick="enterButton"
                app:layout_constraintTop_toBottomOf="@+id/chk"
                app:srcCompat="@drawable/btn_login" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/login_new_user"
                android:textAlignment="center"
                android:textColor="@color/purple" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
