<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".SettingsActivity"
    android:layout_marginHorizontal="16dp"
    android:layout_marginBottom="8dp">

    <TextView
        android:id="@+id/textView15"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/settings_header"
        android:textStyle="bold"
        android:textColor="@color/purple"
        android:textSize="32sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView15"
        android:layout_marginTop="157dp"
        android:orientation="vertical">


        <LinearLayout
            android:id="@+id/PrivacyPolicyItems"
            android:layout_width="match_parent"
            android:layout_height="249dp"
            android:layout_below="@+id/searchInput"
            android:layout_marginHorizontal="32dp"
            android:layout_marginVertical="20dp"
            android:orientation="vertical">

            <!--            <LinearLayout-->
            <!--                android:id="@+id/languagearrow"-->
            <!--                android:layout_width="match_parent"-->
            <!--                android:layout_height="64dp"-->
            <!--                android:background="@drawable/background_settings_tabs"-->
            <!--                android:orientation="horizontal">-->

            <!--                <ImageView-->
            <!--                    android:layout_width="wrap_content"-->
            <!--                    android:layout_height="wrap_content"-->
            <!--                    android:layout_gravity="start|center"-->
            <!--                    android:paddingHorizontal="8dp"-->
            <!--                    android:contentDescription="@string/view_more"-->
            <!--                    android:src="@drawable/settings_language"-->
            <!--                    app:tint="@color/purple" />-->

            <!--                <TextView-->
            <!--                    android:id="@+id/textView17"-->
            <!--                    android:layout_width="0dp"-->
            <!--                    android:layout_height="wrap_content"-->
            <!--                    android:layout_weight="1"-->
            <!--                    android:layout_gravity="start|center"-->
            <!--                    android:paddingHorizontal="8dp"-->
            <!--                    android:text="@string/settings_language"-->
            <!--                    android:textSize="16sp"-->
            <!--                    android:textColor="@color/muted_black" />-->

            <!--                <ImageView-->
            <!--                    -->
            <!--                    android:layout_width="wrap_content"-->
            <!--                    android:layout_height="wrap_content"-->
            <!--                    android:layout_gravity="center|right"-->
            <!--                    android:paddingHorizontal="8dp"-->
            <!--                    android:contentDescription="@string/view_more"-->
            <!--                    android:src="@drawable/nav_settings_arrow"-->
            <!--                    app:tint="@color/purple" />-->
            <!--            </LinearLayout>-->

            <!--            <View-->
            <!--                android:id="@+id/divider4"-->
            <!--                android:layout_width="match_parent"-->
            <!--                android:layout_marginHorizontal="8dp"-->
            <!--                android:layout_height="1dp"-->
            <!--                android:background="@color/purple_500" />-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:background="@drawable/background_settings_tabs"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|center"
                    android:contentDescription="@string/view_more"
                    android:paddingHorizontal="8dp"
                    android:src="@drawable/settings_dark_mode"
                    app:tint="@color/purple" />

                <TextView
                    android:id="@+id/textView18"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|center"
                    android:layout_weight="1"
                    android:paddingHorizontal="8dp"
                    android:text="@string/settings_dark_mode"
                    android:textColor="@color/muted_black"
                    android:textSize="16sp" />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/switch1"
                    android:layout_width="20dp"
                    android:layout_height="48dp"
                    android:layout_gravity="center|end"
                    android:layout_weight="1"
                    android:paddingHorizontal="8dp"
                    app:tint="@color/purple" />
            </LinearLayout>

            <View
                android:id="@+id/divider5"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginHorizontal="8dp"
                android:background="@color/purple_500" />

            <LinearLayout
                android:id="@+id/accountButton"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:background="@drawable/background_settings_tabs"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|center"
                    android:contentDescription="@string/view_more"
                    android:paddingHorizontal="8dp"
                    android:src="@drawable/nav_account"
                    app:tint="@color/purple" />

                <TextView
                    android:id="@+id/textView19"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|center"
                    android:layout_weight="1"
                    android:paddingHorizontal="8dp"
                    android:text="@string/settings_accounts"
                    android:textColor="@color/muted_black"
                    android:textSize="16sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|end"
                    android:contentDescription="@string/view_more"
                    android:paddingHorizontal="8dp"
                    android:src="@drawable/nav_settings_arrow"
                    app:tint="@color/purple" />
            </LinearLayout>

            <View
                android:id="@+id/divider6"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginHorizontal="8dp"
                android:background="@color/purple_500" />


            <View
                android:id="@+id/divider8"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginHorizontal="8dp"
                android:background="@color/purple_500" />

            <LinearLayout
                android:id="@+id/aboutButton"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:background="@drawable/background_settings_tabs"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|center"
                    android:contentDescription="@string/view_more"
                    android:paddingHorizontal="8dp"
                    android:src="@drawable/nav_about"
                    app:tint="@color/purple" />

                <TextView
                    android:id="@+id/textView22"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|center"
                    android:layout_weight="1"
                    android:paddingHorizontal="8dp"
                    android:text="@string/settings_about"
                    android:textColor="@color/muted_black"
                    android:textSize="16sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|right"
                    android:contentDescription="@string/view_more"
                    android:paddingHorizontal="8dp"
                    android:src="@drawable/nav_settings_arrow"
                    app:tint="@color/purple" />
            </LinearLayout>

            <View
                android:id="@+id/divider9"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginHorizontal="8dp"
                android:background="@color/purple_500" />
        </LinearLayout>
    </LinearLayout>


</RelativeLayout>